Trade-Offer/style.css
.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  height: 75vh;
  width: 75vh;
  margin: auto;
}

body {
  background: linear-gradient(to bottom left, #65068d, #f37272);
}

.template-image {
  display: inline-flex;
  flex-basis: 0;
  flex-grow: 1;
  min-width: 100%;
  justify-content: center;
  align-items: center;
}

.template-image {
  position: relative;
  width: 100%;
  height: 100vh;
}

.giveDiv {
  position: absolute;
  top: 200;
  left: 0;
  min-width: auto;
  max-width: 35vh;
  height: 100%;
  color: white;
  font-size: 22px;
  font-weight: bold;
  text-align: right;
  align-items: right;
  justify-content: flex-end;
  overflow: auto;
  border: 0;
}

.takeDiv {
  position: absolute;
  top: 200;
  right: 0;
  min-width: auto;
  max-width: 35vh;
  height: 100%;
  color: white;
  font-size: 22px;
  font-weight: bold;
  text-align: left;
  align-items: left;
  justify-content: flex-start;
  overflow: auto;
}

.giveDiv,
.takeDiv {
  width: 50%;
  height: 50%;
  padding: 20px;
  padding-top: 50px;
  margin: auto;
  text-align: center;
  color: white;
  line-height: 1.5em;
  z-index: 1;
}

.give-input,
.take-input {
  width: 100%;
  height: 25vh;
}

button {
  justify-content: center;
  width: 99%;
  height: 10vh;
}
.give-input,
.take-input,
button {
  display: inline-block;
}

.input-container {
  display: block;
  padding-top: 175px;
}

.give-container,
.take-container {
  display: inline-block;
  width: 49%;
}

h1 {
  text-align: center;
}
/* This will set the maximum width and height of the textDiv class to be 40px less than the width and height of the image.
 This will ensure that the text divs do not overflow outside of the image. 
 Maybe seperate with another div? it's not aligning properly, need to do some reading/thinking
 Maybe need to justify content center, with a max width on the text fields, and peg them to either take to right, take to left, 
 https://stackoverflow.com/questions/38000159/two-50-divs-with-white-spacenowrap-elements-inside-a-flex-container
 */

/* OLD CSS: Experimenting with new things before I duplicate another site:
.textDiv {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: calc(100% - 40px);
  max-height: calc(100% - 40px);
}

.takeDiv {
  left: 0;
  flex-basis: 0;
  flex-grow: 1;
  min-width: 100%;
}

.giveDiv {
  right: 0;
  flex-basis: 0;
  flex-grow: 1;
  min-width: 100%;
}
*/

